Minor README edit

--- a/README
+++ b/README
@@ -3,6 +3,6 @@ Date: 2012-02-25 14:31
 
 This project contains some sample code written by Satoshi Payne.
 
-The original project which these codes came from is a project using:
+The original project which these files came from is a project using:
 - Yii PHP MVC Framework
 - Doctrine 2 ORM
