Minor README edit

--- a/README
+++ b/README
@@ -6,3 +6,4 @@ This project contains some sample code written by Satoshi Payne.
 The original project which these files came from is a project using:
 - Yii PHP MVC Framework
 - Doctrine 2 ORM
+- SVN
