--- a/README
+++ b/README
@@ -5,5 +5,6 @@ This project contains some sample code written by Satoshi Payne.
 
 The original project which these files came from is a project using:
 - Yii PHP MVC Framework
+- Smarty Templating Engine
 - Propel ORM
 - SVN
