--- a/README
+++ b/README
@@ -4,6 +4,8 @@ Last Updated: 2016-04-21 13:40
 
 This project contains some sample code written by Satoshi Payne.
 
+All works in this project are copyright to Satoshi Payne unless mentioned otherwise. Code is made public for organisations that wish to code review my work.
+
 Files of the following:
 
 2012
